# gamepad-video-controller

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  python-publish.yml
gamepad_video_controller/: autostart.py  help_dialog.py  main.py  tray.py
